--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_posts/2021-11-27-obsidian-to-github.md",
+            "file": "_posts/2021-10-15-the-red-caped-girl.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_posts/2021-11-27-obsidian-to-github.md",
+                "file": "_posts/2021-10-15-the-red-caped-girl.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,7 +88,14 @@
   },
   "active": "25bcd94d3f5bd2e6",
   "lastOpenFiles": [
-    "_posts/2021-11-27-obsidian-to-github.md",
-    "_pages/about.md"
+    "_posts/2021-10-15-the-red-caped-girl.md",
+    "_posts/2021-10-18-last-night-in-lisbon.md",
+    "_pages/about.md",
+    "_posts/2021-10-13-vaclav-havel-and-conflicting-advice.md",
+    "_posts/2021-11-22-waiting-at-peters.md",
+    "_posts/2021-10-12-empty.md",
+    "_templates/post-template.md",
+    "_posts/2021-11-27-gift.md",
+    "_posts/2021-11-27-obsidian-to-github.md"
   ]
 }
