updated index and more

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: Michal Korzonek
 url: https://michalkorzonek.com
 title: Michał Korzonek
-description: Shine ✨ Shine ✨ Shine ✨
+description: Catalyst Wizard, at Your Service.
 twitter:
   username: michalkorzonek
   card: summary
