--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 links:
 - title: ✨ Michał
   url: /
-- title: Projects
-  url: /projects
+- title: Cards
+  url: /cards
 - title: Sailing
   url: /sailing
-- title: Books
-  url: /books
+- title: Projects
+  url: /projects
